Added build dependencies to the Makefile

--- a/code/other_challanges/make/Makefile
+++ b/code/other_challanges/make/Makefile
@@ -1,11 +1,17 @@
 SHELL = /bin/sh
 
-OBJS =  main.cpp Entity.cpp
+OBJS =  main.o Entity.o
 CFLAG = -Wall -g
 CC = g++
 
-main:$(OBJS)
+main: main.o Entity.o
 	${CC} ${CFLAGS} -o $@ $(OBJS)
+
+main.o: main.cpp Entity.h
+	${CC} -c main.cpp
+
+Entity.o: Entity.cpp Entity.h
+	${CC} -c Entity.cpp
 
 clean:
 	-rm main
